<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.thatcherbm.movingtruck.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtTiltle"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textStyle="normal|bold"
        android:textSize="25sp"
        android:id="@+id/titleTxt" />

    <ImageView
        android:layout_width="240dp"
        android:layout_height="192dp"
        app:srcCompat="@drawable/movingtruck"
        android:layout_below="@+id/titleTxt"
        android:layout_centerHorizontal="true"
        android:id="@+id/truckPic" />

    <TextView
        android:text="@string/titleTruck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/truckPic"
        android:layout_centerHorizontal="true"
        android:id="@+id/titleTruck"
        android:layout_weight="1"
        android:textSize="20sp"
        android:paddingTop="10dp" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titleTruck"
        android:layout_centerHorizontal="true"
        android:id="@+id/rdgrpTruck" >

        <RadioButton
            android:text="@string/rdobt10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rdbt10"
            android:layout_weight="1"
            android:checked="true" />

        <RadioButton
            android:text="@string/rdobt17"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rdbt17"
            android:layout_weight="1" />

        <RadioButton
            android:text="@string/rdobt26"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rdbt26"
            android:layout_weight="1" />
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rdgrpTruck"
        android:layout_centerHorizontal="true"
        android:id="@+id/titleMiles"
        android:textSize="20sp"
        android:paddingTop="10dp"
        android:text="@string/titleMiles" />

    <EditText
        android:layout_height="30dp"
        android:inputType="number"
        android:ems="10"
        android:layout_below="@+id/titleMiles"
        android:layout_centerHorizontal="true"
        android:id="@+id/edtxtMiles"
        android:textSize="18sp"
        android:textColor="?attr/colorPrimaryDark"
        android:background="@android:color/background_light"
        android:layout_width="100dp"
        android:text="0"
        android:textAlignment="textEnd"
        android:gravity="center_vertical|end" />



    <Button
        android:text="@string/btncalc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edtxtMiles"
        android:layout_centerHorizontal="true"
        android:id="@+id/btcalc" />
</RelativeLayout>
